# neural-scaling-probe

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: noise_injection.py  quickstart.py
scaling_law_probe/: __init__.py  __main__.py  probe.py
scaling_law_probe/encoders/: __init__.py  text.py
scaling_law_probe/probes/: __init__.py  twonn.py
tests/: __init__.py  test_twonn.py
